--- a/docs/tutorial/reasoning.mdx
+++ b/docs/tutorial/reasoning.mdx
@@ -1,6 +1,3 @@
-import CodeTabs, { pythonTab, nodeTab } from "@site/src/components/CodeTabs";
-import TabItem from "@theme/TabItem";
-
 # Reasoning
 
 Reasoning is an advanced capability of AI that enables it to tackle complex
@@ -21,21 +18,17 @@ based on the complexity of your use case.
 In Ailoy, You can activate it by simply specifying an option:
 
 <CodeTabs>
-<TabItem {...pythonTab}>
 
-```python showLineNumbers
-async for resp in agent.run(
-  "Please solve me a simultaneous equation: x+y=3, 4x+3y=12",
-  enable_reasoning=True
+```python
+for resp in agent.run(
+    "Please solve me a simultaneous equation: x+y=3, 4x+3y=12",
+    enable_reasoning=True
 ):
-  print(resp.content, end='')
+    print(resp.content, end='')
 print()
 ```
 
-</TabItem>
-<TabItem {...nodeTab}>
-
-```typescript showLineNumbers
+```typescript
 for await (const resp of agent.run(
   "Please solve me a simultaneous equation: x+y=3, 4x+3y=12",
   {
@@ -47,7 +40,6 @@ for await (const resp of agent.run(
 process.stdout.write("\n");
 ```
 
-</TabItem>
 </CodeTabs>
 
 Since reasoning is an internal process, you may not want to include it in the
@@ -55,22 +47,18 @@ output. In such cases, you can use the `ignore_reasoning` option to exclude it
 from the output.
 
 <CodeTabs>
-<TabItem {...pythonTab}>
 
-```python showLineNumbers
-async for resp in agent.run(
-  "Please solve me a simultaneous equation: x+y=3, 4x+3y=12",
-  enable_reasoning=True,
-  ignore_reasoning_messages=True
+```python
+for resp in agent.run(
+    "Please solve me a simultaneous equation: x+y=3, 4x+3y=12",
+    enable_reasoning=True,
+    ignore_reasoning_messages=True
 ):
-  print(resp.content, end='')
+    print(resp.content, end='')
 print()
 ```
 
-</TabItem>
-<TabItem {...nodeTab}>
-
-```typescript showLineNumbers
+```typescript
 for await (const resp of agent.run(
   "Please solve me a simultaneous equation: x+y=3, 4x+3y=12",
   {
@@ -83,7 +71,6 @@ for await (const resp of agent.run(
 process.stdout.write("\n");
 ```
 
-</TabItem>
 </CodeTabs>
 
 {/* prettier-ignore-start */}
