--- a/docs/tutorial/calling-low-level-apis.mdx
+++ b/docs/tutorial/calling-low-level-apis.mdx
@@ -16,15 +16,51 @@ By using the `Runtime` directly, you can send requests to the `VM` yourself.
 This is useful when you need more advanced configuration or want to call APIs
 that are not available through the high-level interfaces.
 
-Let’s take a look at how the lower-level API works using the
-[`split_text`](../api-references/low-level-runtime-apis.mdx#-split_text-split_text_separators_recursively)
-operator, which transforms a long document into a set of smaller chunks. The
-[`spit_text`](../api-references/low-level-runtime-apis.mdx#-split_text-split_text_separators_recursively)
-operator is essential for tasks like Retrieval-Augmented Generation (RAG).
+Let’s take a look at how the lower-level API works, with the simplest example `echo`.
+The `echo` operator is a basic operator that returns the user's input as-is.
 
-For this example, we’ll use Lev Tolstoy’s
-[What Men Live by](https://www.gutenberg.org/files/6157/6157-h/6157-h.htm) as
-the reference text.
+Here’s how to call the echo operator:
+
+<CodeTabs>
+
+```python
+from ailoy import Runtime
+
+rt = Runtime()
+
+result = rt.call("echo", {"text": "Hello world"})
+
+print(result)
+
+rt.stop()
+```
+
+```typescript
+import { startRuntime } from "ailoy-node";
+
+(async () => {
+  const rt = await startRuntime();
+
+  const result = await rt.call("echo", { text: "Hello world" });
+
+  console.log(results);
+
+  await rt.stop();
+})();
+```
+
+</CodeTabs>
+
+<TerminalBox>
+Hello world
+</TerminalBox>
+
+Next, let’s try a more practical operator.
+The [`split_text`](../api-references/internal-runtime-apis.mdx#split_text)
+operator transforms a long document into a set of smaller chunks.
+This operation is essential for tasks like Retrieval-Augmented Generation (RAG).
+
+We’ll use Lev Tolstoy’s [What Men Live by](https://www.gutenberg.org/files/6157/6157-h/6157-h.htm) to break a long passage into multiple chunks.
 
 <CodeTabs>
 
@@ -68,13 +104,11 @@ import { readFile } from "fs/promises";
   console.log(chunks[0]);
   console.log("*********************************************************");
 
-  rt.stop();
+  await rt.stop();
 })();
 ```
 
 </CodeTabs>
-
-{/* prettier-ignore-start */}
 
 <TerminalBox>
 {`
@@ -108,7 +142,107 @@ He came closer, so that it was clearly visible. To his surprise it really was a 
 
 </TerminalBox>
 
-{/* prettier-ignore-end */}
+Some jobs may require state, like member variables in a class.
+Ailoy provides support for this kind of stateful structure through a type called a `Component`.
+
+In this example, we’ll directly invoke an LLM using the low-level Runtime API.
+To begin, a `Component` must first be initialized using the `define` call.
+In here, we define a `Component` of type [tvm_language_model](../api-references/internal-runtime-apis.mdx#tvm_language_model) with the name `lm0`.
+It can later be removed using the `delete` call.
+
+The tvm_language_model `Component` provides a **method** [`infer`](../api-references/internal-runtime-apis.mdx#tvm_language_modelinfer), which can be used to perform LLM inference.
+
+<CodeTabs>
+
+```python
+from ailoy import Runtime
+
+rt = Runtime()
+
+rt.define("tvm_language_model", "lm0", {"model": "Qwen/Qwen3-0.6B"})
+
+for resp in rt.call_iter_method(
+    "lm0", "infer", {"messages": [{"role": "user", "content": "What's your name?"}]}
+):
+    print(resp)
+
+rt.delete("lm0")
+
+rt.stop()
+```
+
+```typescript
+import { startRuntime } from "ailoy-node";
+
+(async () => {
+  const rt = await startRuntime();
+
+  await rt.define("tvm_language_model", "lm0", {
+    model: "Qwen/Qwen3-0.6B",
+  });
+
+  for await (const resp of rt.callIterMethod("lm0", "infer", {
+    messages: [{ role: "user", content: "What's your name?" }],
+  })) {
+    console.log(resp);
+  }
+
+  await rt.delete("lm0");
+
+  await rt.stop();
+})();
+```
+
+</CodeTabs>
+
+<TerminalBox>
+{`
+{'message': {'role': 'assistant', 'content': 'My'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' name'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' is'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' an'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' AI'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' assistant'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ','}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' and'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' I'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': "'m"}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' here'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' to'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' help'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' you'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' with'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' any'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' questions'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' or'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' tasks'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': '.'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' If'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' you'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' have'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' something'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' you'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': "'d"}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' like'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' to'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' discuss'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ','}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' feel'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' free'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' to'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' ask'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': '!'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': ' 😊'}, 'finish_reason': None}
+{'message': {'role': 'assistant', 'content': '\\n'}, 'finish_reason': 'stop'}
+`}
+</TerminalBox>
+
+To understand this properly, it helps to be familiar with the conventions used by LLMs.
+The model name should match the model card ID on HuggingFace.
+You can check [Qwen3-0.6B](https://huggingface.co/Qwen/Qwen3-0.6B) model card.
+
+The input format follows OpenAI's chat API — you can refer to [this page](https://platform.openai.com/docs/guides/text?api-mode=chat) for details.
+For the output format, please refer to the [corresponding documentation](../concepts/agent-response-format).
 
 See [Low-level Runtime APIs](../api-references/low-level-runtime-apis.mdx) for
 the full list of available APIs.
