--- a/docs/concepts/tools.mdx
+++ b/docs/concepts/tools.mdx
@@ -7,25 +7,72 @@ In Ailoy, a **tool** allows an agent to access functionality beyond what the bas
 
 ### Description
 
-The `description` field defines how the AI understands and uses the tool. It follows the standard described in [Transformer's tool definitions](https://huggingface.co/docs/transformers/v4.51.3/en/chat_templating_writing#tool-definitions), including details such as the tool's name, purpose, input parameters, and example usage. This helps the LLM decide *when* and *how* to use the tool.
+The `description` field defines how the AI understands and uses the tool. It follows the standard described in **[tool definitions of Transformers](https://huggingface.co/docs/transformers/v4.51.3/en/chat_templating_writing#tool-definitions)**, including details such as the tool's name, purpose, input parameters, and example usage. This helps the LLM decide *when* and *how* to use the tool.
 
 ### Behavior
 
-The `behavior` field defines how the tool actually behaves when invoked. This varies depending on the tool type. For example, a REST API tool includes the endpoint URL, HTTP method, and headers. A native tool may define a Python function, while a universal tool delegates the behavior to a pre-defined module.
+The `behavior` field defines how the tool actually behaves when invoked. This varies depending on the tool type. For example, a REST API tool includes the endpoint URL, HTTP method, and headers. A native tool may define a Python or Node.js function, while a built-in tool delegates the behavior to a pre-defined module.
 
-## Tool types
+To see the examples, take a look at the **[out-of-the-box tools](#out-of-the-box-tools)**.
+
+## Types
 
 There are three types of tools in Ailoy. While they all share a common `description` format, each type defines `behavior` differently.
 
-### Built-in tools
+### REST API tools
 
-Built-in tools uses the function of Ailoy’s internal module system. It work across all environments. These tools are pre-registered and can be referenced by name.
+REST API tools allow the AI to access external APIs over HTTP. This is ideal for retrieving real-time or third-party information.
 
-**Behavior**: Defined by preset behavior implemented inside Ailoy.
+#### Behavior
+REST API tools basically send requests to get their results.
+
+The `behavior` object of a REST API tool definition can contain:
+
+- URL(`baseURL`), HTTP method(`method`) and headers(`headers`) to define the REST API request to send.
+
+- Authentication method(`authentication`) to apply pre-defined authentication injection.
+If the API does not require authentication or needs custom one, the authentication field may not be contained.
+
+- Body content(`body`) to be the requests body of `POST` or `PUT` requests.
+
+- A JMESPath query string(`outputPath`) to process the raw results of the REST API into useful data.
+
+The parameters that the LLM decided to put into the REST API tool can become:
+
+- Path parameters: Ones included as `{param_name}` in the `baseUrl` field
+- Body parameters: Ones included as `{param_name}` in the `body` field
+- Query parameters: Ones other than path parameters or body parameters
 
 ```json
 {
-  "outputPath": "value"
+  "type": "restapi",
+  "description": {...},
+  "behavior": {
+    "baseURL": "https://api.themoviedb.org/3/search/movie",
+    "method": "GET",
+    "authentication": "bearer",
+    "headers": {
+      "accept": "application/json"
+    },
+    "outputPath": "results[:5].{id: id, title: title, overview: overview, original_language: original_language, genre_ids: genre_ids, release_date: release_date, vote_average: vote_average, adult:adult}"
+  }
+}
+```
+
+### Built-in tools
+
+Built-in tools uses the function of Ailoy’s internal module system. It work across all the environments supported. These tools are pre-registered and can be referenced by name.
+
+**Behavior**: Defined by preset behavior implemented inside Ailoy. The only thing defined outside of Ailoy is the JMESPath query string(`outputPath`) to process the raw results of the function into useful data.
+
+
+```json
+{
+  "type": "built-in",
+  "description": {...},
+  "behavior": {
+    "outputPath": "value"
+  }
 }
 ```
 
@@ -33,29 +80,41 @@ Built-in tools uses the function of Ailoy’s internal module system. It work ac
 
 Native tools allow developers to define custom Python functions that will be executed when the AI requests a tool call. This is useful for logic that lives inside your application.
 
-**Behavior**: A Python function or coroutine that will be called with arguments from the AI.
+**Behavior**: A Python or Node.js function or coroutine that will be called with arguments from the AI.
 
-### RESTAPI tools
+<CodeTabs>
+```python
+def a_useful_function_impl(arg0, arg1):
+    a_useful_value = 0
+    ...              # Your own codes
+    return a_useful_value
 
-RESTAPI tools allow the AI to access external APIs over HTTP. This is ideal for retrieving real-time or third-party information.
-
-**Behavior**: Getting results by applying the given JMESPath to the result of GET request sent with the given URL, Headers, and Parameters.
-
-```json
-{
-    "behavior": {
-        "baseURL": "https://api.themoviedb.org/3/search/movie",
-        "method": "GET",
-        "authentication": "bearer",
-        "headers": {
-            "accept": "application/json"
-        },
-        "outputPath": "results[:5].{id: id, title: title, overview: overview, original_language: original_language, genre_ids: genre_ids, release_date: release_date, vote_average: vote_average, adult:adult}"
-    }
-}
+with Agent(...) as agent:
+  agent.add_py_function_tool(
+    desc={...},      # Tool description
+    f=a_useful_function_impl,
+  )
 ```
 
+```typescript
+const a_useful_function_impl = ({ arg0, arg1 }) => {
+    let a_useful_value = 0
+    ...       // Your own codes
+    return a_useful_value
+  };
+
+const agent = await defineAgent(...);
+agent.addJSFunctionTool(
+  {...},      // Tool description
+  a_useful_function_impl
+);
+```
+</CodeTabs>
+
+
 ## Out-of-the-box tools
+
+These are the **[preset tools](https://github.com/brekkylab/ailoy/tree/main/presets/tools)** in Ailoy that you can use.
 
 ### Calculator
 A calculator that evaluates a mathatical expression as a floating-point number.
@@ -70,43 +129,63 @@ For example,
 #### Mathematical Constants and Functions
 Behaviors of these are same as ones in **[cmath](https://en.cppreference.com/w/cpp/header/cmath)**.
 
- - `e`
- - `pi`
 
- - `sqrt(x)`
- - `cbrt(x)`
- - `abs(x)`
- - `floor(x)`
- - `ceil(x)`
+| Symbols | Descriptions |
+|---|---|
+| `e`, `pi` | Mathematical constants |
+| `abs(x)`, `round(x)`, `trunc(x)`, `floor(x)`, `ceil(x)` | Common value adjustment functions |
+| `sqrt(x)`, `cbrt(x)` | Root of the value functions |
+| `ln(x)`, `log(x)`, `log10(x)` | Logarithms |
+| `sin(x)`, `cos(x)`, `tan(x)` | Trigonometric functions |
+| `asin(x)`, `acos(x)`, `atan(x)`, `atan2(y,x)` | Inverse trigonometric functions |
+| `sinh(x)`, `cosh(x)`, `tanh(x)` | Hyperbolic functions |
+| `fac(n)`, `ncr(n,r)`, `npr(n,r)` | Combinatorial functions |
 
- - `ln(x)`
- - `log(x)`
- - `log10(x)`
+#### Code to apply this tool
+<CodeTabs>
+```python
+with Agent(...) as agent:
+  agent.add_tools_from_preset("calculator")
+  agent.query("Evaluate sin(pi/2).")
+```
 
- - `sin(x)`
- - `cos(x)`
- - `tan(x)`
- - `asin(x)`
- - `acos(x)`
- - `atan(x)`
- - `atan2(y,x)`
+```typescript
+const agent = await defineAgent(...);
+agent.addToolsFromPreset("calculator");
+agent.query("Evaluate sin(pi/2).")
+```
+</CodeTabs>
 
- - `sinh(x)`
- - `cosh(x)`
- - `tanh(x)`
-
- - `fac(n)`
- - `ncr(n,r)`
- - `npr(n,r)`
 
 #### Example message to use this tool
 `Evaluate sin(pi/2).`
 
-### Frankfurters
+### Frankfurters (Currency exchange rates)
 A public API provided by the European Central Bank that provides currency exchange rate information.
+
+You can get exchange rates for one currency against another.
+
+#### Code to apply this tool
+<CodeTabs>
+```python
+with Agent(...) as agent:
+  agent.add_tools_from_preset("frankfurter")
+  agent.query("I want to buy 100 U.S. Dollar with my Korean Won. How much do I need to take?")
+```
+
+```typescript
+const agent = await defineAgent(...);
+agent.addToolsFromPreset("frankfurter");
+agent.query("I want to buy 100 U.S. Dollar with my Korean Won. How much do I need to take?")
+```
+</CodeTabs>
 
 #### Example message to use this tool
 `I want to buy 100 U.S. Dollar with my Korean Won. How much do I need to take?`
+
+`Please summarize the current exchange rate situation of major currencies.`
+
+`I have 3000 yen, how much is this in USD?`
 
 ### TMDB
 The API provided by **[TMDB](https://www.themoviedb.org/)**, the fully open source movie database service. 
@@ -119,12 +198,11 @@ The API provided by **[TMDB](https://www.themoviedb.org/)**, the fully open sour
 - `tmdb_movie_watch_providers`: *Get the list of streaming providers we have for a movie in some coutries.*
 - `tmdb_movie_genre_names`: *Get the list of genre names with their ids.*
 
-
 #### API key
 You can get a TMDB API key here: **[link](https://www.themoviedb.org/settings/api)**
 
-<Tabs>
-<TabItem value="py" label="Python">
+#### Code to apply this tool with API key
+<CodeTabs>
 ```python
 tmdb_api_key = ...
 
@@ -133,22 +211,22 @@ with Agent(...) as agent:
     "tmdb",
     authenticator=BearerAuthenticator(tmdb_api_key),
   )
+  agent.query("Show me some famous movies recently.")
 ```
-</TabItem>
-<TabItem value="node" label="JavaScript(Node)">
+
 ```typescript
 tmdbApiKey = ...
 
-const agent = await defineAgent(rt, "qwen3-8b");
+const agent = await defineAgent(...);
 agent.addToolsFromPreset("tmdb", {
   authenticator: bearerAutenticator(tmdbApiKey),
 });
+agent.query("Show me some famous movies recently.")
 ```
-</TabItem>
-</Tabs>
+</CodeTabs>
 
 #### Example message to use this tool
-`Show me some recently famous movies.`
+`Show me some famous movies recently.`
 
 `Can you find me every Iron Man movies?`
 
@@ -169,6 +247,7 @@ NY Times API requires to put API key in the query parameter, so you can add it t
 
 This is an example of applying authentication in the way you want.
 
+#### Code to apply this tool with API key
 <CodeTabs>
 ```python
 nytimes_api_key = ...
@@ -187,6 +266,7 @@ with Agent(...) as agent:
       "nytimes",
       authenticator=nytimes_authenticator,
   )
+  agent.query("Find me some articles about 'Agentic AI'.")
 ```
 
 ```typescript
@@ -202,8 +282,13 @@ const authenticator: ToolAuthenticator = {
 agent.addToolsFromPreset("nytimes", {
   authenticator,
 });
+agent.query("Find me some articles about 'Agentic AI'.")
 ```
 </CodeTabs>
 
 #### Example message to use this tool
 `Find me some articles about 'Agentic AI'.`
+
+`News on financial market trends, please.`
+
+`Search for the latest scientific research results.`
